GCI-142 Fix bad code practises